Clean Css and overflow fix burger menu

--- a/styles/About.css
+++ b/styles/About.css
@@ -183,7 +183,7 @@ nav {
   z-index: 900;
 }
 
-  /* definition of our animation for nav items */
+/* definition of our animation for nav items */
 @keyframes animation {
 
 from {
@@ -194,6 +194,11 @@ to {
   transform: translateX(0px);
   opacity: 1;
 }
+}
+
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
 }
 
 nav li {
@@ -207,23 +212,15 @@ nav li {
   animation-duration: 500ms;
 }
 
-nav li {
-  list-style: none;
-  }
-
 nav li a {
   left: 100%;
-  text-decoration: none;
   line-height: 5rem;
-  color: black;
-  display: block;
 }
 
 .AboutWrapper {
   display: flex;
   align-content: center;
   align-items: center;
-  flex-direction: column;
   margin-top: 0;
   margin-left: 0;
 }
@@ -237,13 +234,11 @@ nav li a {
 
 h1 {
   font-size: 1.25rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
 }
 
 .AboutPicture {
-  justify-content: center;
   display: flex;
+  justify-content: center;
   margin-top: 1rem;
 }
 
@@ -255,16 +250,12 @@ h1 {
 .AboutText {
   display: flex;
   justify-content: center;
-  width: 75%;
   margin-top: 2rem;
   margin-bottom: 4rem;
 }
 
 .AboutText p {
-  font-family: "Montserrat", sans-serif;
   font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5rem;
 }
 
 .footer-desktop {
@@ -283,117 +274,31 @@ h1 {
 
 @media screen and (max-width: 530px) {
 
-main {
-  flex-direction: column;
-  }
-
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
-  width: 100%;
-  height: 12vh;
-}
-
 header button {
-  display: block;
   width: 20px;
   height: 40px;
-  background: none;
-  border: none;
   transform: scale(1.2);
-  cursor: pointer;
-  z-index: 999;
 }
 
 header .name {
-  margin: 0;
-  font-weight: bold;
   font-size: 1.25rem;
-  z-index: 999;
-}
-
-nav {
-  display: none;
-  position: absolute;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: white;
-}
-
-/* definition of our animation for nav items */
-@keyframes animation {
-from {
-  transform: translateX(-100px);
-  opacity: 0;
-}
-
-to {
-  transform: translateX(0px);
-  opacity: 1;
-}
 }
 
 nav li {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  font-family: "Montserrat", sans-serif;
   font-size: 0.9rem;
   font-weight: 500;
-  animation-name: animation; /* assign animation */
-  animation-duration: 500ms;
-}
-
-nav li {
-  list-style: none;
 }
 
 nav li a {
-  left: 100%;
-  text-decoration: none;
   line-height: 4rem;
-  color: black;
-  display: block;
-}
-
-.AboutHeader {
-  height: 2.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
 }
 
 h1 {
   font-size: 1.125rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-}
-
-.AboutPicture {
-  justify-content: center;
-  display: flex;
-  margin-top: 1rem;
-}
-
-.AboutText {
-  display: flex;
-  justify-content: center;
-  width: 75%;
-  margin-top: 2rem;
-  margin-bottom: 4rem;
 }
 
 .AboutText p {
-  font-family: "Montserrat", sans-serif;
   font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.5rem;
 }
 
 .AboutPicture img {
@@ -402,19 +307,11 @@ h1 {
 }
 
 .instagram {
-  color: black;
-  font-family: "Montserrat", sans-serif;
   font-size: 0.7rem;
-  font-weight: 500;
-  text-decoration: none;
-  text-align: center;
+
 }
 
 .copyright {
-  margin: 3rem 0 1rem 0;
-  font-family: "Montserrat", sans-serif;
   font-size: 0.5rem;
-  text-align: center;
-  line-height: 1.5;
 }
 }
