--- a/styles/home.css
+++ b/styles/home.css
@@ -110,7 +110,6 @@ height: 80vh;
   }
 
   header {
-    display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
@@ -132,7 +131,6 @@ height: 80vh;
 
   header .name {
     margin: 0;
-    font-weight: bold;
     font-size: 1.7rem;
     z-index: 999;
   }
@@ -173,16 +171,9 @@ height: 80vh;
     animation-duration: 500ms;
   }
 
-  nav li {
-    list-style: none;
-  }
-
   nav li a {
     left: 100%;
-    text-decoration: none;
     line-height: 5rem;
-    color: black;
-    display: block;
   }
 
 .swiper-container{
@@ -195,7 +186,7 @@ height: 80vh;
 	height: 70vh;
 }
 
-  footer {
+footer {
     position: absolute;
     display: flex;
     align-items: center;
@@ -207,109 +198,39 @@ height: 80vh;
 }
 
 @media screen and (max-width: 530px) {
-  main {
-    flex-direction: column;
+
+main {
+  flex-direction: column;
   }
 
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-    height: 12vh;
+header button {
+  width: 20px;
+  height: 40px;
+  transform: scale(1.2);
   }
 
-  header button {
-    display: block;
-    width: 20px;
-    height: 40px;
-    background: none;
-    border: none;
-    transform: scale(1.2);
-    cursor: pointer;
-    z-index: 999;
-  }
+header .name {
+  font-size: 1.25rem;
+}
 
-  header .name {
-    margin: 0;
-    font-weight: bold;
-    font-size: 1.25rem;
-    z-index: 999;
-  }
+ nav li {
+   font-size: 0.9rem;
+}
 
-  nav {
-    display: none;
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: white;
-  }
-
-  /* definition of our animation for nav items */
-  @keyframes animation {
-    from {
-      transform: translateX(-100px);
-      opacity: 0;
-    }
-    to {
-      transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-
-  nav li {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    font-family: "Montserrat", sans-serif;
-    font-size: 0.9rem;
-    font-weight: 500;
-    animation-name: animation; /* assign animation */
-    animation-duration: 500ms;
-  }
-
-  nav li {
-    list-style: none;
-  }
-
-  nav li a {
-    left: 100%;
-    text-decoration: none;
+nav li a {
     line-height: 4rem;
-    color: black;
-    display: block;
-  }
+}
 
 .swiper-container{
 	margin-top: 5vh;
 	height: 60vh;
-	width: 100vw;
-	animation-name: animation;
-    animation-duration: 500ms;
 }
 
 .swiper-slide img {
 	height: 50vh;
-	animation-name: animation;
-    animation-duration: 500ms;
 }
 
-  footer {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: -999;
-  }
-
-	.instagram {
+.instagram {
   	color: black;
   	font-family: "Montserrat", sans-serif;
   	font-size: 0.7rem;
@@ -318,7 +239,7 @@ height: 80vh;
  	text-align: center;
 	}
 
-	.copyright {
+.copyright {
   	margin: 3rem 0 1rem 0;
   	font-family: "Montserrat", sans-serif;
   	font-size: 0.5rem;
